# htmx-axum-handlebars

./: Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: main.rs
templates/: hello.hbs
